--- a/categories.html
+++ b/categories.html
@@ -36,6 +36,7 @@
     <li><a href="./category/worth-it.html">Worth It</a></li>
     <li><a href="./category/data.html">data</a></li>
     <li><a href="./category/data-education-policy-and-politics-providence.html">data, Education, policy and politics, Providence</a></li>
+    <li><a href="./category/misc.html">misc</a></li>
     <li><a href="./category/policy-and-politics.html">policy and politics</a></li>
     <li><a href="./category/policy-and-politics-providence.html">policy and politics, Providence</a></li>
     <li><a href="./category/policy-and-politics-providence-urban-development-and-design.html">policy and politics, Providence, Urban Development and Design</a></li>
