Fixed link on About page

--- a/about.html
+++ b/about.html
@@ -24,13 +24,12 @@
         <div class=body>
             <div class='page'>
         <h1> About </h1>
-        <p>Jason Becker resides in Providence, Rhode Island with his partner in crime Elsa, and their sidekick, Gracie<sup id="fnref:dog"><a class="footnote-ref" href="#fn:dog" rel="footnote">1</a></sup>. By day, his <strong>wonkflag</strong> flies high in his role as a [Strategic Data Fellow][]. At night, his <strong>geekcred</strong> is strengthened as his eyes and ears are engaged endlessly in film, television, books, comics, podcasts...</p>
+        <p>Jason Becker resides in Providence, Rhode Island with his partner in crime Elsa, and their sidekick, Gracie<sup id="fnref:dog"><a class="footnote-ref" href="#fn:dog" rel="footnote">1</a></sup>. By day, his <strong>wonkflag</strong> flies high in his role as a <a href="http://www.gse.harvard.edu/sdp/">Strategic Data Fellow</a>. At night, his <strong>geekcred</strong> is strengthened as his eyes and ears are engaged endlessly in film, television, books, comics, podcasts...</p>
 <div class="footnote">
 <hr />
 <ol>
 <li id="fn:dog">
-<p>Endless love and hair stuffed in a 22 pound dog.
-[Strategic Data Fellow]: http://www.gse.harvard.edu/sdp/&#160;<a class="footnote-backref" href="#fnref:dog" rev="footnote" title="Jump back to footnote 1 in the text">&#8617;</a></p>
+<p>Endless love and hair stuffed in a 22 pound dog.&#160;<a class="footnote-backref" href="#fnref:dog" rev="footnote" title="Jump back to footnote 1 in the text">&#8617;</a></p>
 </li>
 </ol>
 </div>
