Fix Work Place Liberty footnotes

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         <div class=body>
             <div class='page'>
         <h1> About </h1>
-        <p>Jason Becker resides in Providence, Rhode Island with his partner in crime Elsa, and their sidekick, Gracie<sup id="fnref:dog"><a class="footnote-ref" href="#fn:dog" rel="footnote">1</a></sup>. By day, his <strong>wonkflag</strong> flies high in his role as a <a href="http://www.gse.harvard.edu/sdp/">Strategic Data Fellow</a>. At night, his <strong>geekcred</strong> is strengthened as his eyes and ears are engaged endlessly in film, television, books, comics, podcasts...</p>
+        <p><a href="http://www.jsonbecker.com">Jason Becker</a> resides in Providence, Rhode Island with his partner in crime Elsa, and their sidekick, Gracie<sup id="fnref:dog"><a class="footnote-ref" href="#fn:dog" rel="footnote">1</a></sup>. By day, his <strong>wonkflag</strong> flies high in his role as a <a href="http://www.gse.harvard.edu/sdp/">Strategic Data Fellow</a>. At night, his <strong>geekcred</strong> is strengthened as his eyes and ears are engaged endlessly in film, television, books, comics, podcasts...</p>
 <div class="footnote">
 <hr />
 <ol>
