Funding Formula Post

--- a/drafts/summer-reading.html
+++ b/drafts/summer-reading.html
@@ -78,9 +78,14 @@
 <p>I really don't want to say much from this book except that it is heartbreakingly beautiful in a way that only someone like Gaiman can manage. This is a book that should be read in just one or two sittings. It is profoundly satisfying for anyone who loves to read books that transform who and where they are. Gaiman achieves this completely.</p>
 <h2>Comics</h2>
 <h3>Locke and Key</h3>
-<p>Joe Hill is a master of his craft. Over Memorial Day weekend there was a great Comixology sale that dramatically reduced the price of getting in on Locke and Key and I jumped right on board.</p>
+<p>Joe Hill is a master of his craft. Over Memorial Day weekend there was a great Comixology sale that dramatically reduced the price of getting in on <a href="http://www.amazon.com/dp/1600102379/?tag=jasonpbeckerc-20">Locke and Key</a> and I jumped right on board.</p>
 <p>I have rarely cared so much for a set of characters, regardless of the medium.</p>
+<p>Our main characters, the Locke family (three young children and their mother), are faced with tragedy in the very first panels of <em>Welcome to Lovecraft</em>, the opening volume of this six-part series. I think what makes Locke and Key unique is rather than use tragedy simply as the opportunity to produce heroism, our protagonists are faced with real, long lasting, deep, and horrifying consequences. </p>
+<p>All the while, we are thrust into the fascinating world of Key House, the Locke family home where our main characters' father grew up. Key House is home to magical keys each of which can open one locked door. Step through that door, and there are fantastical consequences like dying, becoming a spirit free to float around the house until your spirit returns through the door. One door might bring great strength, another flight. </p>
+<p>It is not surprising that the tragedy that drives the Locke family back to Key House is deeply connected to the mysterious home's history, and the very source of its magic. What is brilliant is how Joe Hill quietly reveals the greater plot through the every day misadventures of children who are dealing with a massive life change. These characters are rich, their world is fully realized, and the story is quite compelling. A must read.</p>
+<p>Don't believe me? The Incomparable strikes again with a <a href="http://5by5.tv/incomparable/126">great episode</a> on the first volume of Locke and Key.</p>
 <h3>American Vampire</h3>
+<p>I was turned on to <a href="http://www.amazon.com/dp/1401229743/?tag=jasonpbeckerc-20">American Vampire</a> by <a href="http://www.dansent.me">Dan Benjamin</a>. Wow. Phenomenal. These are real vampires.</p>
 <h3>East of West</h3>
 <h3>Saga</h3>
 <div class="footnote">
